Added new content and made some changes to the website's existing content

--- a/analysis-pages/fb.html
+++ b/analysis-pages/fb.html
@@ -18,10 +18,10 @@
         </div>
         <section class="logo-nav">
             <div class="logo">
-                <a href="index.html">
+                <a href="../index.html">
                     <img id="logo-white" src="../img/themarketpal-white.svg" alt="The MarketPal Logo">
                 </a>
-                <a href="index.html">
+                <a href="../index.html">
                     <img id="logo-black" src="../img/themarketpal-black.svg" alt="The MarketPal Logo">
                 </a>
                 <hr class="logo-hr">
@@ -38,7 +38,7 @@
             </nav>
         </section>
         <div class="support-container">
-            <a class="btn" href="../support.html">Support</a>
+            <a class="btn" href="../newsletter.html">Newsletter</a>
         </div>
     </header>
 
@@ -50,18 +50,18 @@
                 <h2 class="lrg-txt">Facebook, Inc.</h2>
                 <hr>
                 <div class="basic-container-cnt-txt">
-                    <a href="../pdfs/fb-analysis.pdf" class="btn4" target="_blank">PDF of analysis paper</a>
+                    <a href="#" class="btn4" target="_blank">PDF of analysis paper</a>
                 </div>
                 <div class="basic-container">
                     <h2 class="title-text-center">Comments on the stock:</h2>
-                    <p>Facebook is definitely one of my favorite stocks in the stock market as of right now, and it's a company that I really believe in long term. I wanted to write about this one next because it's one that I have done a lot of research on and I definitely plan on buying more of it if we were to get another drop in the market.</p>
+                    <p>Facebook is definitely one of my favorite stocks in the stock market as of right now, and it's a company that I really believe in long term. Paper on Facebook, Inc. will be released here soon.</p>
                     <br>
-                        <div class="basic-img-container">
+                        <!-- <div class="basic-img-container">
                             <img src="../img/atvi-criteria.svg" alt="Activision Blizzard, Inc.">
-                        </div>
+                        </div> -->
                     <br>
-                    <h2 class="title-text-center">Additional interesting info I didn't add in the paper</h2>
-                    <p>The release of Facebook shops has me a lot more excited about the stock because it'll expand its horizons and increase the amount of users on their website and increase their advertising business greatly.</p>
+                    <!-- <h2 class="title-text-center">Additional interesting info I didn't add in the paper</h2>
+                    <p>The release of Facebook shops has me a lot more excited about the stock because it'll expand its horizons and increase the amount of users on their website and increase their advertising business greatly.</p> -->
                 </div>
             </div>
         </div>
