--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
             </nav>
         </section>
         <div class="support-container">
-            <a class="btn" href="support.html">Support</a>
+            <a class="btn" href="newsletter.html">Newsletter</a>
         </div>
     </header>
 
@@ -60,6 +60,22 @@
             </div>
             <hr class="hr-short">
         -->
+            <div class="basic-container-cnt-txt">
+                <img src="blog-posts/b-img/google-business-model-img.JPG" alt="Photo of Google's business model page of their 2019 form 10-k" class="title-img-ins">
+                <p class="detail-text-itl">7/10/200</p>
+                <h2 class="title-text-center">Understanding a Company's Business Model and Why It's Important</h2>
+                <p class="detail-text">As I say all the time, you need to understand a business before you invest in it. You do this by reading their annual reports. When you take a look at a company's 10-k that they will release annually at the end of the forth quarter of their fiscal year, one of the first things that will be on that form is the company's business model, what they do, what they're all about, how they do things, etc.</p>
+                <a href="blog-posts/understanding-a-companys-business-model-and-why-its-important.html" class="btn4">Read More</a>
+            </div>
+            <hr class="hr-short">
+            <div class="basic-container-cnt-txt">
+                <img src="blog-posts/b-img/dont-panic-toilet-paper.jpg" alt="Picture from pexels.com of last piece of toilet paper with 'don't panic' on it" class="title-img-ins">
+                <p class="detail-text-itl">7/3/2020</p>
+                <h2 class="title-text-center">Panic Selling, Investing, and the Problem with Investing with Emotion</h2>
+                <p class="detail-text">I understand that it could be very nerve racking to see a stock that you've just bought go down big and it could be very tempting to sell to avoid a big loss. However, I think this is a very ineffective approach to investing and it's not very smart either.</p>
+                <a href="blog-posts/panic-selling.html" class="btn4">Read More</a>
+            </div>
+            <hr class="hr-short">
             <div class="basic-container-cnt-txt">
                 <img src="blog-posts/b-img/oxford-form-10k.JPG" alt="Oxford Industries Form 10-K" class="title-img-ins">
                 <p class="detail-text-itl">6/26/2020</p>
