--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/home.css">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
+    <script data-ad-client="ca-pub-7533576871166781" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <header>
@@ -38,7 +39,7 @@
             </nav>
         </section>
         <div class="support-container">
-            <a class="btn" href="support.html">Support</a>
+            <a class="btn" href="newsletter.html">Newsletter</a>
         </div>
     </header>
     
@@ -48,16 +49,16 @@
                 <div class="bg-img"></div>
                 <div class="showcase-content">
                     <h1 class="h1-white">Latest Blog on The MarketPal</h1>
-                    <p class="p-white"><b>The Importance of Reading Annual Reports</b></p>    
-                    <p class="p-white">Warren Buffett, who I talk about quite a bit, and will continue to talk about him and his teachings in the future, always preaches that investors should be reading as many annual reports as they possibly can.</p>    
+                    <p class="p-white"><b>Understanding a Company's Business Model and Why It's Important</b></p>    
+                    <p class="p-white">When you take a look at a company's 10-k that they will release annually at the end of the forth quarter of their fiscal year, one of the first things that will be on that form is the company's business model, what they do, what they're all about, how they do things, etc.</p>    
                 </div>
                 <div class="btn-container">
-                    <a href="blog-posts/read-reports-faster.html" class="btn2">Keep Reading</a>
+                    <a href="blog-posts/read-reports-faster.html" class="btn2">Go To Blog</a>
                 </div>
             </section>
             <section class="main-container">
                 <div class="main-box">
-                    <h2 class="h1-white">Daily Content</h2>
+                    <h2 class="h1-white">Portfolio News</h2>
                     <p class="p-white">Every day I’ll post cool moves on stocks I’m watching, relevant news, and more!</p>
                     <div class="btn-container">
                         <a class="btn2" href="dailies.html">Check it Out</a>
