--- a/newsletter.html
+++ b/newsletter.html
@@ -37,7 +37,7 @@
             </nav>
         </section>
         <div class="support-container">
-            <a class="btn" href="support.html">Support</a>
+            <a class="btn" href="newsletter.html">Newsletter</a>
         </div>
     </header>
 
@@ -45,7 +45,7 @@
         <div class="wrapper">
             <h1>Sign Up to the Newsletter!</h1>
             <div class="basic-container">
-                <p>Every week on Monday's I'll send out a newsletter with interesting thoughts, ideas, recommendations for resources, a joke maybe. Who knows, sign up and find out!</p>
+                <p>I'll send out a newsletter every week with updates for new blog posts, research papers, as well as additional content I post on the website. Occasionally, I'll send out ideas and thoughts I want to share, tips I come across, things that I've found helpful or that I have learned recently or in the past, and recommendations for useful resources and content that can help you as an investor. Make sure to sign up if you'd like, thank you!</p>
             </div>
             <div class="basic-container">
                 <iframe width="540" height="420" src="https://d9780d4f.sibforms.com/serve/MUIEAN529HBmBwS1tqP3mktQsQR2yLGyp0G1KNsEK3g84NxjPRXpwEA1vTVnIfMZ_7D9BprrooneZwUpAqOxhMfAfMGO2LY7xGiCwJgo0KjUzs10J0t9pqWIkte9HBk6jJKwLQ28hOJ5-lKwh4inneP9FTS9CkVUcO6lMuv0715z4ClML7yH37EYZYHVKWV_SL5okDDvrBNfLg5W" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
