--- a/resources.html
+++ b/resources.html
@@ -38,7 +38,7 @@
             </nav>
         </section>
         <div class="support-container">
-            <a class="btn" href="support.html">Support</a>
+            <a class="btn" href="newsletter.html">Newsletter</a>
         </div>
     </header>
 
@@ -47,6 +47,8 @@
             <h1>Resources</h1>
             <div class="resource-container">
                 <div class="basic-container">
+                    <p>Here you can find some useful information about the different metrics I use when I'm researching new stocks. It's good to keep in mind that these aren't definitive metrics I use to make investment decisions, they're simply metrics I like to use in some cases with certain stocks. I mainly use these as additional research metrics if there's something about a stock I want to know, for fun, or because I'm curious. I don't make investment decisions based on these metrics for every stock I look into and these aren't essentials you must know in order to start investing. They're just some metrics I personally use sometimes.</p>
+                    <br>
                     <table>
                         <tr>
                             <td class="desc-cell">
@@ -80,10 +82,10 @@
                         </tr>
                         <tr>
                             <td class="desc-cell">
-                                <a href="">
-                                    <b>New one coming soon</b>
+                                <a href="pdfs/calculating-leverage.pdf" target="_blank">
+                                    <b>Calculating Leverage and Finding ICR</b>
                                     <br>
-                                    New guide coming up soon on finding company leverage
+                                    This is useful if you want to know a company's level of borrowing and if they have the net income to be able to pay the interest on their borrowed money.
                                 </a>
                             </td>
                             <td><img src="img/leverage-pic.jpg" alt="Leverage" class="img-cell"></td>
