--- a/analysis-pages/atvi.html
+++ b/analysis-pages/atvi.html
@@ -18,10 +18,10 @@
         </div>
         <section class="logo-nav">
             <div class="logo">
-                <a href="index.html">
+                <a href="../index.html">
                     <img id="logo-white" src="../img/themarketpal-white.svg" alt="The MarketPal Logo">
                 </a>
-                <a href="index.html">
+                <a href="../index.html">
                     <img id="logo-black" src="../img/themarketpal-black.svg" alt="The MarketPal Logo">
                 </a>
                 <hr class="logo-hr">
@@ -38,7 +38,7 @@
             </nav>
         </section>
         <div class="support-container">
-            <a class="btn" href="../support.html">Support</a>
+            <a class="btn" href="../newsletter.html">Newsletter</a>
         </div>
     </header>
 
