--- a/blog-posts/read-reports-faster.html
+++ b/blog-posts/read-reports-faster.html
@@ -53,7 +53,7 @@
             </nav>
         </section>
         <div class="support-container">
-            <a class="btn" href="../support.html">Support</a>
+            <a class="btn" href="../newsletter.html">Newsletter</a>
         </div>
     </header>
 
