--- a/calendar.html
+++ b/calendar.html
@@ -47,7 +47,7 @@ position: absolute; top:0; left: 0; width: 100%; height: 100%;
             </nav>
         </section>
         <div class="support-container">
-            <a class="btn" href="support.html">Support</a>
+            <a class="btn" href="newsletter.html">Newsletter</a>
         </div>
     </header>
 
