--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
             </nav>
         </section>
         <div class="support-container">
-            <a class="btn" href="support.html">Support</a>
+            <a class="btn" href="newsletter.html">Newsletter</a>
         </div>
     </header>
 
