Added content to the website

--- a/blog.html
+++ b/blog.html
@@ -60,9 +60,19 @@
             </div>
             <hr class="hr-short">
         -->
+
+        <!-- Remember to release a newsletter to announce the release of the blog post -->
+            <div class="basic-container-cnt-txt">
+                <img src="blog-posts/b-img/stress-upset-image.jpg" alt="Man in a suit that seems to be stressed and upset at something. Image was obtained at pexels.com" class="title-img-ins">
+                <p class="detail-text-itl">7/17/2020</p>
+                <h2 class="title-text-center">Not Knowing Where To Start When You Want To Invest</h2>
+                <p class="detail-text">A lot of people want to start investing but get discouraged or procrastinate on starting because investing properly, unlike gambling in the market, can seem quite difficult and overwhelming. I'll try to show you some very basic and small steps you can take to get over that fear or hesitation of starting.</p>
+                <a href="blog-posts/not-knowing-where-to-start-when-you-want-to-invest.html" class="btn4">Read More</a>
+            </div>
+            <hr class="hr-short">
             <div class="basic-container-cnt-txt">
                 <img src="blog-posts/b-img/google-business-model-img.JPG" alt="Photo of Google's business model page of their 2019 form 10-k" class="title-img-ins">
-                <p class="detail-text-itl">7/10/200</p>
+                <p class="detail-text-itl">7/10/2020</p>
                 <h2 class="title-text-center">Understanding a Company's Business Model and Why It's Important</h2>
                 <p class="detail-text">As I say all the time, you need to understand a business before you invest in it. You do this by reading their annual reports. When you take a look at a company's 10-k that they will release annually at the end of the forth quarter of their fiscal year, one of the first things that will be on that form is the company's business model, what they do, what they're all about, how they do things, etc.</p>
                 <a href="blog-posts/understanding-a-companys-business-model-and-why-its-important.html" class="btn4">Read More</a>
