--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 <div class="bg-img"></div>
                 <div class="showcase-content">
                     <h1 class="h1-white">Latest Blog on The MarketPal</h1>
-                    <p class="p-white"><b>Understanding a Company's Business Model and Why It's Important</b></p>    
-                    <p class="p-white">When you take a look at a company's 10-k that they will release annually at the end of the forth quarter of their fiscal year, one of the first things that will be on that form is the company's business model, what they do, what they're all about, how they do things, etc.</p>    
+                    <p class="p-white"><b>Not Knowing Where To Start When You Want To Invest</b></p>    
+                    <p class="p-white">A lot of people want to start investing but get discouraged or procrastinate on starting because investing properly, unlike gambling in the market, can seem quite difficult and overwhelming. I'll try to show you some very basic and small steps you can take to get over that fear or hesitation of starting.</p>    
                 </div>
                 <div class="btn-container">
-                    <a href="blog-posts/read-reports-faster.html" class="btn2">Go To Blog</a>
+                    <a href="blog-posts/not-knowing-where-to-start-when-you-want-to-invest.html" class="btn2">Go To Blog</a>
                 </div>
             </section>
             <section class="main-container">
