Updated and added new content as well as affiliate links for blogs

--- a/dailies.html
+++ b/dailies.html
@@ -52,6 +52,12 @@
             <h1>Portfolio News</h1>
             <section class="main-event">
                 <div class="basic-container">
+                    <h2 class="section-heading">Clip of the Day!</h2>
+                    <p class="writing-text">Warren Buffett talking about stock with low ROE when you're holding them long term and why he stays away from them. <a href="https://www.youtube.com/watch?v=FYDuDCQlzqA&t=165s" target="_blank">Full video can be found here.</a></p>
+                    <video width="520" height="340" controls src="blog-posts/vid/Warren Buffett ROE.mp4" style="margin: 0 auto;"></video>
+                </div>
+                <br>
+                <div class="basic-container">
                     <h2 class="section-heading">Carnival Corporation Q2 2020 Earnings Quick Overview</h2>
                     <p class="writing-text">On 7/10/2020, Carnival Corporation released their earnings for the three months ended March 31, 2020. Q2 earnings were worse than expected with adjusted EPS being at -$3.3 per share compared to -$1.83 per share that was expected.</p>
                     <br>
