--- a/portfolio.html
+++ b/portfolio.html
@@ -137,6 +137,10 @@
                             <th scope="col">Status</th>
                         </tr>
                         <tr>
+                            <td>Oracle Corporation (NASDAQ: ORCL)</td>
+                            <td>Watchlist</td>
+                        </tr>
+                        <tr>
                             <td>NVIDIA Corporation (NASDAQ: NVDA)</td>
                             <td>Watchlist</td>
                         </tr>
@@ -150,11 +154,11 @@
                             <td>Watchlist</td>
                         </tr>
                         <tr>
-                            <td>PayPal Holdings, Inc. (NASDAQ: PYPL</td>
+                            <td>PayPal Holdings, Inc. (NASDAQ: PYPL)</td>
                             <td>Watchlist</td>
                         </tr>
                         <tr>
-                            <td>Twitter, Inc. (NASDAQ: TWTR</td>
+                            <td>Twitter, Inc. (NASDAQ: TWTR)</td>
                             <td>Watchlist</td>
                         </tr>
                     </table>
