Added another blog to the website

--- a/blog.html
+++ b/blog.html
@@ -60,6 +60,14 @@
             </div>
             <hr class="hr-short">
         -->
+            <div class="basic-container-cnt-txt">
+                <img src="blog-posts/b-img/tesla-logo.png" alt="PNG image of Tesla's logo" class="title-img-ins">
+                <p class="detail-text-itl">7/22/2020</p>
+                <h2 class="title-text-center">Tesla Has Fourth Consecutive Profitable Quarter | Tesla Q2 2020 Earnings Quick(ish) Overview and Summary</h2>
+                <p class="detail-text">Tesla released Q2 2020 earnings today, July 22,2020 and has yet another profitable quarter when everyone was expecting a loss for the quarter.</p>
+                <a href="blog-posts/tesla-q2-2020-earnings-overview.html" class="btn4">Read More</a>
+            </div>
+            <hr class="hr-short">
 
         <!-- Remember to release a newsletter to announce the release of the blog post -->
             <div class="basic-container-cnt-txt">
