--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <div class="bg-img"></div>
                 <div class="showcase-content">
                     <h1 class="h1-white">Latest Blog on The MarketPal</h1>
-                    <p class="p-white"><b>Not Knowing Where To Start When You Want To Invest</b></p>    
-                    <p class="p-white">A lot of people want to start investing but get discouraged or procrastinate on starting because investing properly, unlike gambling in the market, can seem quite difficult and overwhelming. I'll try to show you some very basic and small steps you can take to get over that fear or hesitation of starting.</p>    
+                    <p class="p-white"><b>Tesla Has Fourth Consecutive Profitable Quarter | Tesla Q2 2020 Earnings Quick(ish) Overview and Summary</b></p>    
+                    <p class="p-white">Tesla released Q2 2020 earnings today, July 22,2020 and has yet another profitable quarter when everyone was expecting a loss for the quarter.</p>    
                 </div>
                 <div class="btn-container">
                     <a href="blog-posts/not-knowing-where-to-start-when-you-want-to-invest.html" class="btn2">Go To Blog</a>
