Added new content

--- a/blog.html
+++ b/blog.html
@@ -73,9 +73,17 @@
             <div class="basic-container-cnt-txt">
                 <img src="blog-posts/b-img/stress-upset-image.jpg" alt="Man in a suit that seems to be stressed and upset at something. Image was obtained at pexels.com" class="title-img-ins">
                 <p class="detail-text-itl">7/17/2020</p>
-                <h2 class="title-text-center">Not Knowing Where To Start When You Want To Invest</h2>
+                <h2 class="title-text-center">5 Things You Can Do If You Don't Know Where to Start When You Want to Invest</h2>
                 <p class="detail-text">A lot of people want to start investing but get discouraged or procrastinate on starting because investing properly, unlike gambling in the market, can seem quite difficult and overwhelming. I'll try to show you some very basic and small steps you can take to get over that fear or hesitation of starting.</p>
-                <a href="blog-posts/not-knowing-where-to-start-when-you-want-to-invest.html" class="btn4">Read More</a>
+                <a href="blog-posts/5-things-you-can-do-if-you-dont-know-where-to-start-when-you-want-to-invest.html" class="btn4">Read More</a>
+            </div>
+            <hr class="hr-short">
+            <div class="basic-container-cnt-txt">
+                <img src="blog-posts/b-img/ccl-cruise-ship.jpg" alt="Carnival Cruise Ship photo from pexels.com" class="title-img-ins">
+                <p class="detail-text-itl">7/12/2020</p>
+                <h2 class="title-text-center">Carnival Corporation Releases Earnings for Q2 2020</h2>
+                <p class="detail-text">As of July 7, 2020, Carnival Corporation has released earnings for the second quarter of the 2020 fiscal year. There is quite a bit of information in their press release as well as in the 10-Q released by the company. After cruises coming to a complete halt for 3 months or so, it's fairly obvious that their business has been tremendously impacted.</p>
+                <a href="blog-posts/ccl-q2-2020-earnings.html" class="btn4">Read More</a>
             </div>
             <hr class="hr-short">
             <div class="basic-container-cnt-txt">
