--- a/resources.html
+++ b/resources.html
@@ -47,7 +47,7 @@
             <h1>Resources</h1>
             <div class="resource-container">
                 <div class="basic-container">
-                    <p>Here you can find some useful information about the different metrics I use when I'm researching new stocks. It's good to keep in mind that these aren't definitive metrics I use to make investment decisions, they're simply metrics I like to use in some cases with certain stocks. I mainly use these as additional research metrics if there's something about a stock I want to know, for fun, or because I'm curious. I don't make investment decisions based on these metrics for every stock I look into and these aren't essentials you must know in order to start investing. They're just some metrics I personally use sometimes.</p>
+                    <p>Here you can find some useful information about the different metrics I use when I'm researching new stocks. It's good to keep in mind that these aren't definitive metrics I use to make investment decisions, they're simply metrics I like to use in some cases with certain stocks.</p>
                     <br>
                     <table>
                         <tr>
