Update to file contents

--- a/portfolio.html
+++ b/portfolio.html
@@ -132,10 +132,12 @@
                 <div class="watchlist-container">
                     <table>
                         <caption>Watchlist</caption>
-                        <tr>
-                            <th scope="col">Stock</th>
-                            <th scope="col">Status</th>
-                        </tr>
+                        <thead>
+                            <tr>
+                                <th scope="col">Stock</th>
+                                <th scope="col">Status</th>
+                            </tr>
+                        </thead>
                         <tr>
                             <td>Oracle Corporation (NASDAQ: ORCL)</td>
                             <td>Watchlist</td>
